vm list&info&console

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,8 @@ SENTRY_DSN=
 # Configure these with your own Docker registry images
 DOCKER_IMAGE_BACKEND=backend
 DOCKER_IMAGE_FRONTEND=frontend
+
+PROXMOX_HOST=your-proxmox-host
+PROXMOX_USER=root@pam
+PROXMOX_PASSWORD=your-password
+PROXMOX_VERIFY_SSL=false
