--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,13 @@ PROXMOX_HOST=your-proxmox-host
 PROXMOX_USER=root@pam
 PROXMOX_PASSWORD=your-password
 PROXMOX_VERIFY_SSL=false
+PROXMOX_ISO_STORAGE=local
+PROXMOX_DATA_STORAGE=local-lvm
+
+# Proxmox API Timeouts (in seconds)
+# API_TIMEOUT: Timeout for individual API requests (default: 30)
+# TASK_TIMEOUT: Max time to wait for long-running tasks like VM cloning (default: 300 = 5 minutes)
+# TASK_CHECK_INTERVAL: Seconds between task status checks to avoid overwhelming API (default: 2)
+PROXMOX_API_TIMEOUT=30
+PROXMOX_TASK_TIMEOUT=300
+PROXMOX_TASK_CHECK_INTERVAL=2
